--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -47,3 +47,136 @@ table {
   border-spacing: 0;
 }
 
+
+
+
+// FONTS
+
+
+@font-face {
+  font-family: 'Proxima Nova bold';
+  src: url('../../fonts/ProximaNova-Bold.eot');
+  src: url('../../fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../../fonts/ProximaNova-Bold.woff2') format('woff2'),
+    url('../../fonts/ProximaNova-Bold.woff') format('woff'),
+    url('../../fonts/ProximaNova-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Proxima Nova semibold';
+  src: url('../../fonts/ProximaNova-Semibold.eot');
+  src: url('../../fonts/ProximaNova-Semibold.eot?#iefix') format('embedded-opentype'),
+    url('../../fonts/ProximaNova-Semibold.woff2') format('woff2'),
+    url('../../fonts/ProximaNova-Semibold.woff') format('woff'),
+    url('../../fonts/ProximaNova-Semibold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Proxima Nova semibold italic';
+  src: url('ProximaNova-SemiboldIt.eot');
+  src: url('ProximaNova-SemiboldIt.eot?#iefix') format('embedded-opentype'),
+    url('ProximaNova-SemiboldIt.woff2') format('woff2'),
+    url('ProximaNova-SemiboldIt.woff') format('woff'),
+    url('ProximaNova-SemiboldIt.ttf') format('truetype');
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('../../fonts/ProximaNova-Regular.eot');
+  src: url('../../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../../fonts/ProximaNova-Regular.woff2') format('woff2'),
+    url('../../fonts/ProximaNova-Regular.woff') format('woff'),
+    url('../../fonts/ProximaNova-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+//FONT SETTINGS
+
+/* Single property */
+html {
+  @include fluid-type(font-size, 320px, 1366px, 15px, 18px);
+  background-color:#f5f5f5;
+}
+
+
+
+/* Multiple properties with same values */
+h1 {
+  font-family: 'Proxima Nova bold';
+  line-height:1.25;
+  font-size:2.369em;
+  @include fluid-type(padding-bottom padding-top, 20em, 70em, 0.5em, 0.5em);
+  text-align:center;
+}
+
+h2{
+  font-family: 'Proxima Nova bold';
+  line-height:1.25;
+  font-size:2em;
+  @include fluid-type(padding-bottom padding-top, 20em, 70em, 0.5em, 0.5em);
+  text-align:center;
+}
+
+
+p{
+  font-family: 'Proxima Nova';
+  font-size:1.125em;
+  line-height:1.5;
+  @include fluid-type(padding-bottom, 20em, 70em, 2em, 4em);
+  text-align:center;
+  max-width:550px;
+}
+
+
+
+
+
+// SECTIONS
+
+section.opening{
+  height:90vh;
+  background-image: url("../../images/GregProfilepic.jpg");
+  background-position:10% top;
+  background-size:cover;
+  width:100%;
+  position:relative;
+  h1{
+    position:absolute;
+    top:50%;
+    transform:translateY(-50%);
+    text-align:left;
+    margin:0 auto;
+    width:100%;
+    color:#fff;
+    span{
+      color:$yellow;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
