--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -120,6 +120,7 @@ h1 {
   font-family: 'Proxima Nova bold';
   line-height:1.25;
   font-size:2.369em;
+  letter-spacing:1px;
   @include fluid-type(padding-bottom padding-top, 20em, 70em, 0.5em, 0.5em);
 
 }
@@ -168,7 +169,7 @@ section.intro,section.more_about{
 section.opening{
   height:90vh;
   background-image: url("../../images/GregProfilepic.jpg");
-  background-position:0 center;
+  background-position:50%;
   background-size:cover;
   background-repeat:no-repeat;
   width:98vw;
@@ -181,6 +182,7 @@ section.opening{
     text-align:left;
     margin:0 auto;
     color:#fff;
+    width:93.75%;
     text-align:center;
     margin-left:3.125%;
     margin-right:3.125%;
