--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -57,22 +57,22 @@ table {
 
 @font-face {
   font-family: 'Proxima Nova bold';
-  src: url('../../fonts/ProximaNova-Bold.eot');
-  src: url('../../fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/ProximaNova-Bold.woff2') format('woff2'),
-    url('../../fonts/ProximaNova-Bold.woff') format('woff'),
-    url('../../fonts/ProximaNova-Bold.ttf') format('truetype');
+  src: url('../../dist/fonts/ProximaNova-Bold.eot');
+  src: url('../../dist/fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../../dist/fonts/ProximaNova-Bold.woff2') format('woff2'),
+  url('../../dist/fonts/ProximaNova-Bold.woff') format('woff'),
+  url('../../dist/fonts/ProximaNova-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova semibold';
-  src: url('../../fonts/ProximaNova-Semibold.eot');
-  src: url('../../fonts/ProximaNova-Semibold.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/ProximaNova-Semibold.woff2') format('woff2'),
-    url('../../fonts/ProximaNova-Semibold.woff') format('woff'),
-    url('../../fonts/ProximaNova-Semibold.ttf') format('truetype');
+  src: url('../../dist/fonts/ProximaNova-Semibold.eot');
+  src: url('../../dist/fonts/ProximaNova-Semibold.eot?#iefix') format('embedded-opentype'),
+  url('../../dist/fonts/ProximaNova-Semibold.woff2') format('woff2'),
+  url('../../dist/fonts/ProximaNova-Semibold.woff') format('woff'),
+  url('../../dist/fonts/ProximaNova-Semibold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
@@ -80,21 +80,21 @@ table {
 @font-face {
   font-family: 'Proxima Nova semibold italic';
   src: url('ProximaNova-SemiboldIt.eot');
-  src: url('ProximaNova-SemiboldIt.eot?#iefix') format('embedded-opentype'),
-    url('ProximaNova-SemiboldIt.woff2') format('woff2'),
-    url('ProximaNova-SemiboldIt.woff') format('woff'),
-    url('ProximaNova-SemiboldIt.ttf') format('truetype');
+  src: url('../../dist/fonts/ProximaNova-SemiboldIt.eot?#iefix') format('embedded-opentype'),
+  url('../../dist/fonts/ProximaNova-SemiboldIt.woff2') format('woff2'),
+  url('../../dist/fonts/ProximaNova-SemiboldIt.woff') format('woff'),
+  url('../../dist/fonts/ProximaNova-SemiboldIt.ttf') format('truetype');
   font-weight: 600;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../../fonts/ProximaNova-Regular.eot');
-  src: url('../../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/ProximaNova-Regular.woff2') format('woff2'),
-    url('../../fonts/ProximaNova-Regular.woff') format('woff'),
-    url('../../fonts/ProximaNova-Regular.ttf') format('truetype');
+  src: url('../../dist/fonts/ProximaNova-Regular.eot');
+  src: url('../../dist/fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
+  url('../../dist/fonts/ProximaNova-Regular.woff2') format('woff2'),
+  url('../../dist/fonts/ProximaNova-Regular.woff') format('woff'),
+  url('../../dist/fonts/ProximaNova-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -168,7 +168,7 @@ section.intro,section.more_about{
 
 section.opening{
   height:90vh;
-  background-image: url("../../images/GregProfilepic.jpg");
+  background-image: url("../../dist/images/GregProfilepic.jpg");
   background-position:50%;
   background-size:cover;
   background-repeat:no-repeat;
@@ -177,6 +177,7 @@ section.opening{
   position:relative;
   h1{
     position:absolute;
+    line-height:1;
     top:50%;
     transform:translateY(-50%);
     text-align:left;
@@ -328,7 +329,7 @@ section.projects{
 
 
 section.contact{
-  background-image: url("../../images/footer_back.jpg");
+  background-image: url("../../dist/images/footer_back.jpg");
   @include fluid-type(padding-bottom padding-top, 20em, 70em, 6em, 8em);
   background-size:cover;
   color:#fff;
